<resources>
    <string name="app_name" translatable="false">What\'s left?</string>
    <string name="navbar_map">Karte</string>
    <string name="navbar_markets">Läden</string>
    <string name="navbar_shopping_list">Einkaufsliste</string>
    <string name="market">Läden</string>
    <string name="near_you">in Ihrer Umgebung</string>
    <string name="store_is_open">Geöffnet</string>
    <string name="store_is_closed">Geschlossen</string>
    <string name="address_title">Anschrift</string>
    <string name="is_open_title">Geöffnet</string>
    <string name="groceries">Lebensmittel</string>
    <string name="products">Produkte</string>
    <string name="milk">Milch</string>
    <string name="bread">Brot</string>
    <string name="toilet_paper">Toilettenpapier</string>
    <string name="product">Produkt</string>
    <string name="availability">Bestand</string>
    <string name="sold_out">ausverkauft</string>
    <string name="almost_sold_out">fast ausverkauft</string>
    <string name="available">verfügbar</string>
    <string name="on_boarding_title_1">1. Frag nach</string>
    <string name="on_boarding_message_1">Schau erst nach, ob die Dinge auf deiner Einkaufsliste auch wirklich noch verfügbar sind.</string>
    <string name="on_boarding_title_2">2. Spare Zeit</string>
    <string name="on_boarding_message_2">Spare Zeit indem du erst gar nicht vor leeren Regalen stehst!</string>
    <string name="on_boarding_title_3">3. Hilf anderen</string>
    <string name="on_boarding_message_3">Hilf anderen und melde wieviele Dinge es noch zu kaufen gibt.</string>
    <string name="button_continue">Weiter</string>
    <string name="get_started">Beginnen</string>
    <string name="icon_description">Kleins Bild, zur Veranschaulichung des Textes</string>
    <string name="no_stock_available">Keine Daten</string>
    <string name="transmit_successful">Die Daten wurden erfolgreich gesendet</string>
    <string name="transmit_failed">Es ist ein Fehler aufgetreten</string>
    <string name="empty">ausverkauft</string>
    <string name="less">wenig</string>
    <string name="begin">Beginnen</string>
    <string name="opens_at">Öffnet um</string>
    <string name="store_is_closing_at">Schließt um</string>
    <string name="loading_new_stores">Lade Supermärkte</string>
    <string name="filter">Filter</string>
    <string name="filter_shop">Shops filtern</string>
    <string name="delete_filter">Filter löschen</string>
    <string name="find_stores">Supermärkte anzeigen</string>
    <string name="on_boarding_title_4">4. Standort</string>
    <string name="on_boarding_message_4">Gebe uns Zugriff auf deinen Standort für die besten Ergebnisse.</string>
    <string name="grant_access_location">Standort verwenden</string>
    <string name="zip_code">Postleitzahl</string>
    <string name="insert_zip_code">Bitte gebe deine Postleitzahl an</string>
    <string name="cancel">Abbrechen</string>
    <string name="ok">Bestätigen</string>
    <string name="use_zip_code">Postleitzahl nutzen</string>
</resources>
