<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="de.nivram710.crowd_stock_supermarket.ui.map.MapFragment"
        android:label="@string/navbar_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_markets"
        android:name="de.nivram710.crowd_stock_supermarket.ui.markets.marketsFragment"
        android:label="@string/navbar_markets"
        tools:layout="@layout/fragment_markets" />

    <fragment
        android:id="@+id/navigation_shopping_list"
        android:name="de.nivram710.crowd_stock_supermarket.ui.shoppingList.shoppingListFragment"
        android:label="@string/navbar_shopping_list"
        tools:layout="@layout/fragment_shopping_list" />
</navigation>
