<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.stores.MarketsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="32sp"
        android:text="@string/market"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/near_you"/>

    <com.google.android.gms.maps.MapView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="15dp"
        android:id="@+id/map" />

    <LinearLayout
        android:id="@+id/progress_bar_with_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/loading_new_stores"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/store_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_weight=".5"
        android:divider="@android:color/transparent"
        android:dividerHeight="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone">

    </ListView>

</LinearLayout>