<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailActivity.DetailActivity">

    <TextView
        android:id="@+id/text_view_store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Supermarktname"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_title"
            android:textColor="@color/very_dark_gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Musterstraße 133b, Berlin"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_view_is_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Geschlossen"
            android:textColor="@color/holoRedDark"
            android:textSize="14sp" />

    </LinearLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="16dp"
        android:background="@color/very_light_gray"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/products"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_view_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/availability" />

        <TextView
            android:id="@+id/text_view_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:text="@string/empty"
            android:textColor="@color/holoRedDark"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_view_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:text="@string/less"
            android:textColor="@color/holoOrangeDark"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_view_enough"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:text="@string/available"
            android:textColor="@color/holoGreenLight"
            android:visibility="gone" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_view_products"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button_edit_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/darkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_mode_edit_white_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>